[UPDATE] atualização dos templates, não foi possível passar tudo

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -165,7 +165,7 @@
      </script>
 
     <!-- **BEGIN** Hextom CTB Integration // Main Include - DO NOT MODIFY -->
-      {% render 'hextom_ctb_main', product: product, customer: customer %}
+      {% comment %} {% render 'hextom_ctb_main', product: product, customer: customer %} {% endcomment %}
     <!-- **END** Hextom CTB Integration // Main Include - DO NOT MODIFY -->
 
     <!-- Manychat -->
