[UPDATE] ajustes de estilo na section de blog-posts

--- a/sections/blog-posts.liquid
+++ b/sections/blog-posts.liquid
@@ -52,7 +52,9 @@
           >
             {% render 'resource-card',
               resource: article,
-              resource_type: 'article'
+              resource_type: 'article',
+              image_aspect_ratio: '16/9',
+              image_width: 1800
             %}
           </div>
 
