--- a/snippets/resource-card.liquid
+++ b/snippets/resource-card.liquid
@@ -108,11 +108,20 @@
         </div>
       {%- endif -%}
     {%- elsif resource_type == 'article' -%}
+      {%- if resource.image != blank -%}
         {{
           resource.image
           | image_url: width: image_width
           | image_tag: loading: 'lazy', class: 'resource-card__image', sizes: 'auto', widths: widths
         }}
+      {%- else -%}
+        <div
+          aria-hidden="true"
+          class="resource-card__image-placeholder"
+        >
+          {{- resource.title | truncate: 60 -}}
+        </div>
+      {%- endif -%}
   {%- endif -%}
   </div>
 
