--- a/blocks/video.liquid
+++ b/blocks/video.liquid
@@ -1,35 +1,45 @@
+{% liquid 
+  assign show_block = true 
 
+  assign video_file = product.metafields.custom.video
+  if block.settings.product_video == true and video_file == blank
+    assign show_block = false
+  endif
+%}
 
-{% capture video_style %}
-  {%  render 'spacing-style', settings: block.settings %}
-  {% render 'border-override', settings: block.settings %}
-   --size-style-width: {{ block.settings.custom_width }}%; --size-style-width-mobile: {{ block.settings.custom_width_mobile }}%;
-   --size-style-aspect-ratio: {% if block.settings.source == 'uploaded' %}{{ block.settings.video.aspect_ratio | default: 'auto' }}{% elsif block.settings.cover_image == blank %}{{ block.settings.aspect_ratio }}{% else %}auto{% endif %};
-{% endcapture %}
+{% if show_block == true %}
+  {% capture video_style %}
+    {%  render 'spacing-style', settings: block.settings %}
+    {% render 'border-override', settings: block.settings %}
+    --size-style-width: {{ block.settings.custom_width }}%; --size-style-width-mobile: {{ block.settings.custom_width_mobile }}%;
+    --size-style-aspect-ratio: {% if block.settings.source == 'uploaded' %}{{ block.settings.video.aspect_ratio | default: 'auto' }}{% elsif block.settings.cover_image == blank %}{{ block.settings.aspect_ratio }}{% else %}auto{% endif %};
+  {% endcapture %}
 
-{% if block.settings.source == 'uploaded' %}
-  {% render 'video',
-    video: block.settings.video,
-    video_class: 'spacing-style size-style border-style',
-    video_loop: block.settings.video_loop,
-    video_style: video_style,
-    video_preview_image: block.settings.video.preview_image,
-    additional_attributes: block.shopify_attributes,
-    section_id: section.id
-  %}
-{% else %}
-  {% render 'video',
-    video_from_url: true,
-    video: block.settings.video_url.id,
-    video_class: 'spacing-style size-style border-style',
-    video_type: block.settings.video_url.type,
-    video_style: video_style,
-    video_alt: block.settings.alt,
-    video_preview_image: block.settings.cover_image,
-    additional_attributes: block.shopify_attributes,
-    section_id: section.id
-  %}
+  {% if block.settings.source == 'uploaded' %}
+    {% render 'video',
+      video: block.settings.video,
+      video_class: 'spacing-style size-style border-style',
+      video_loop: block.settings.video_loop,
+      video_style: video_style,
+      video_preview_image: block.settings.video.preview_image,
+      additional_attributes: block.shopify_attributes,
+      section_id: section.id
+    %}
+  {% else %}
+    {% render 'video',
+      video_from_url: true,
+      video: block.settings.video_url.id,
+      video_class: 'spacing-style size-style border-style',
+      video_type: block.settings.video_url.type,
+      video_style: video_style,
+      video_alt: block.settings.alt,
+      video_preview_image: block.settings.cover_image,
+      additional_attributes: block.shopify_attributes,
+      section_id: section.id
+    %}
+  {% endif %}
 {% endif %}
+
 
 {% stylesheet %}
   .placeholder-video {
@@ -71,6 +81,13 @@
       "info": "t:info.video_external",
       "accept": ["youtube", "vimeo"],
       "visible_if": "{{ block.settings.source == 'url' }}"
+    },
+    {
+      "type": "checkbox",
+      "id": "product_video",
+      "label": "Vídeo do produto",
+      "info": "Mostrar apenas se o produto tiver vídeo no metafield",
+      "default": false
     },
     {
       "type": "checkbox",
