[ADD] anchor nomes dos autores -> section dos autores

--- a/blocks/ai_gen_block_a8d62c6.liquid
+++ b/blocks/ai_gen_block_a8d62c6.liquid
@@ -191,7 +191,7 @@
     }
   }
 {% endstyle %}
-<div class="author-cards-container-{{ ai_gen_id }}" {{ block.shopify_attributes }}>
+<div class="author-cards-container-{{ ai_gen_id }}" id="authors" {{ block.shopify_attributes }}>
   {% if block.settings.title != blank %}
     <h2 class="author-cards-title-{{ ai_gen_id }}">{{ block.settings.title }}</h2>
   {% endif %}
