--- a/snippets/resource-card.liquid
+++ b/snippets/resource-card.liquid
@@ -8,8 +8,10 @@
   @param {number} [image_width] - The maximum width of the image, value influences the srcset attribute. Defaults to 1200px.
   @param {string} [image_aspect_ratio] - The aspect ratio to display the image. Defaults to image's natural ratio
   @param {boolean} [image_hover] - Whether to show a secondary image on hover and focus
+  @param {number} [font_size_heading] - Card Heading font size (article)
+  @param {number} [font_size_date] - Card Date font size (article)
+  @param {number} [font_size_body] - Card Body font size (article)
 {%- enddoc -%}
-
 {% liquid
   if image_aspect_ratio == blank or image_aspect_ratio == 'adapt'
     assign ratio = resource.featured_image.aspect_ratio
@@ -128,12 +130,12 @@
   <div class="resource-card__content">
     {%- if resource_type == 'article' -%}
       <div>
-        <p class="resource-card__title" style="font-size: 1.2rem; font-weight: 500; -webkit-line-clamp: 10;">
+        <p class="resource-card__title" style="font-size: {{ font_size_heading }}rem; font-weight: 500; -webkit-line-clamp: 10;">
           {{- resource.title -}}
         </p>
-        <span style="font-size: 0.75rem;">{{- resource.published_at | time_tag: format: 'date' | upcase -}}</span>
+        <span style="font-size: {{ font_size_date }}rem;">{{- resource.published_at | time_tag: format: 'date' | upcase -}}</span>
       </div>
-      <p class="resource-card__subtext paragraph">
+      <p class="resource-card__subtext paragraph" style="font-size: {{ font_size_body }}rem;">
         {{- resource.excerpt | default: resource.content | strip_html | truncatewords: 30 -}}
       </p>
     {%- else -%}
