--- a/blocks/product-card.liquid
+++ b/blocks/product-card.liquid
@@ -193,6 +193,10 @@
             "padding-inline-end": 0
           }
         },
+        "product_badges": {
+          "type": "product-badges",
+          "name": "Product Badges"
+        },
         "product_title": {
           "type": "product-title",
           "name": "t:names.product_title",
@@ -240,7 +244,7 @@
           }
         }
       },
-      "block_order": ["product-card-gallery", "product_title", "price"]
+      "block_order": ["product-card-gallery", "product_badges", "product_title", "price"]
     }
   ]
 }
