--- a/blocks/_product-card-gallery.liquid
+++ b/blocks/_product-card-gallery.liquid
@@ -2,7 +2,7 @@
 
 {% capture children %}
   {% unless closest.product == blank %}
-    {% render 'product-card-badges', product: closest.product %}
+    {% comment %}{% render 'product-card-badges', product: closest.product %}{% endcomment %}
     {%  if settings.quick_add or settings.mobile_quick_add %}
       {% render 'quick-add', product: closest.product, section_id: section.id %}
     {% endif %}
