--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -8,6 +8,10 @@
 
     <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-605565670"></script>
     <script>
