--- a/blocks/product-badges.liquid
+++ b/blocks/product-badges.liquid
@@ -50,6 +50,11 @@
     gap: 0.1rem;
   }
 
+  .product-badges__badge_block:hover{
+    filter: brightness(92%);
+    transition: filter 0.1s;
+  }
+
   .product-badges__badge_block--rectangle {
     padding-block: 2px;
     padding-inline: 5px;
@@ -70,7 +75,14 @@
     "
 >
   {% for tag in tagsList %}
-    <div
+    <a
+      {% if tag == "PRÉ-VENDA" %}
+        href="/collections/pre-venda"
+      {% elsif tag == "NOVIDADE" %}
+        href="/collections/lancamentos-para-adultos"
+      {% else %}
+        href="/collections/all?filter.p.m.custom.categorias={{ tag }}"
+      {% endif %}
       class="product-badges__badge_block product-badges__badge_block--rectangle"
       style="
         {% if tag == "PRÉ-VENDA"  %}background-color: #a90000; color: white; font-weight: bold;
@@ -102,7 +114,7 @@
         </svg>
       {% endif %}
       <span class="tag-text">{{ tag }}</span>
-    </div>
+    </a>
   {% endfor %}
 </div>
 
