[UPDATE] teste arrow slides na margem da página sempre, desconsiderar page-width

--- a/assets/base.css
+++ b/assets/base.css
@@ -3834,7 +3834,8 @@ slideshow-arrows .slideshow-control.slideshow-control--style-none {
 }
 
 .resource-list__carousel slideshow-arrows {
-  padding-inline: var(--util-page-margin-offset);
+  /* padding-inline: var(--util-page-margin-offset); */
+  padding-inline: 1%;
 }
 
 .resource-list__carousel .resource-list__slide {
